--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,13 @@
+amazonProperties.endpointUrl=https://s3.ap-southeast-1.amazonaws.com
+amazonProperties.accessKey=AKIA3B3QIEVBYLB6YB7A
+amazonProperties.secretKey=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
+amazonProperties.bucketName=doducduy-first
 
+# Enable multipart uploads
+spring.servlet.multipart.enabled=true
+# Threshold after which files are written to disk.
+spring.servlet.multipart.file-size-threshold=2KB
+# Max file size.
+spring.servlet.multipart.max-file-size=100MB
+# Max Request Size
+spring.servlet.multipart.max-request-size=105MB
