--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,11 @@ amazonProperties.accessKey=AKIA3B3QIEVBYLB6YB7A
 amazonProperties.secretKey=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
 amazonProperties.bucketName=doducduy-first
 
+viettelProperties.endpointUrl=https://s3.ap-southeast-1.amazonaws.com
+viettelProperties.accessKey=AKIA3B3QIEVBYLB6YB7A
+viettelProperties.secretKey=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
+viettelProperties.bucketName=doducduy-first
+
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
 # Threshold after which files are written to disk.
