--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,11 @@ amazonProperties.accessKey=AKIA3B3QIEVBYLB6YB7A
 amazonProperties.secretKey=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
 amazonProperties.bucketName=doducduy-first
 
-viettelProperties.endpointUrl=https://s3.ap-southeast-1.amazonaws.com
-viettelProperties.accessKey=AKIA3B3QIEVBYLB6YB7A
-viettelProperties.secretKey=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
-viettelProperties.bucketName=doducduy-first
+#viettelProperties.endpointUrl=https://s1.cloudstorage.com.vn
+viettelProperties.endpointUrl=s1.cloudstorage.com.vn
+viettelProperties.accessKey=5002198-s3user
+viettelProperties.secretKey=M5RhUd7oEJ00nxHuQXXT2ZOOSsM6/5xCgoIfF277
+viettelProperties.bucketName=duydo-demo
 
 # Enable multipart uploads
 spring.servlet.multipart.enabled=true
