--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,9 +3,9 @@ amazonProperties.accessKey=AKIA3B3QIEVBYLB6YB7A
 amazonProperties.secretKey=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
 amazonProperties.bucketName=doducduy-first
 
-#viettelProperties.endpointUrl=https://s1.cloudstorage.com.vn
-viettelProperties.endpointUrl=s1.cloudstorage.com.vn
-viettelProperties.accessKey=5002198-s3user
+viettelProperties.endpointUrl=https://s1.cloudstorage.com.vn
+#viettelProperties.endpointUrl=s1.cloudstorage.com.vn
+viettelProperties.accessKey=5002198-s3users
 viettelProperties.secretKey=M5RhUd7oEJ00nxHuQXXT2ZOOSsM6/5xCgoIfF277
 viettelProperties.bucketName=duydo-demo
 
