--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,11 @@ amazonProperties.secretKey=bdAOY9EFBdbEga++HGHLWaDkuVO+F2j+FDjL5gG2
 amazonProperties.bucketName=doducduy-first
 
 viettelProperties.endpointUrl=https://s1.cloudstorage.com.vn
+#viettelProperties.endpointUrl=s1.cloudstorage.com.vn
+#viettelProperties.endpointUrl=https://s3.storebox.vn
+#viettelProperties.endpointUrl=s3.storebox.vn
 viettelProperties.accessKey=5002198-s3user
-viettelProperties.secretKey=1ELfkKiU1WwXU20KTjKP613w+OZnvuHOZwaGmOFU
+viettelProperties.secretKey=eugmb1NWp5ZspLD5E6Y8CjJB8w4jUAUlj2d94PCa
 viettelProperties.bucketName=duydo-demo
 
 # Enable multipart uploads
